[package]
name = "excutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sln-0kto1k = { path = "../sln-0kto1k" }
sln-1kto2k = { path = "../sln-1kto2k" }
sln-2kto3k = { path = "../sln-2kto3k" }
sln-3kto4k = { path = "../sln-3kto4k" }
